# My_Django_Project

./: README.md  cat_data.json  data.json  env.sample  groups.json  prod_data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: blog_data.json  cat_data.json  prod_data.json  vers_data.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_date_manufactured.py  0002_rename_description_category_description_cat_and_more.py  0003_alter_product_category.py  0004_alter_product_category.py  0005_alter_product_category.py  0006_rename_preview_product_image_and_more.py  0007_blog.py  0008_alter_blog_slug.py  0009_alter_blog_image.py  0010_alter_blog_slug.py  0011_version.py  0012_alter_version_indicates_current_version.py  0013_alter_version_product.py  0014_alter_version_version_number.py  0015_product_user.py  0016_alter_product_user.py  0017_product_is_published_prod_alter_product_user.py  0018_alter_product_options.py
catalog/templates/catalog/: about.html  base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  edit_catalog.html  footer.html  head.html  index.html  nav.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  (+3 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
templates/admin/: base_site.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token.py
(+5 files in other folders)
